--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400italic,800italic,400,800");
 /* @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap'); */
 @import url("https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic");
-
+@import url("https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap");
 * {
   box-sizing: border-box;
 }
@@ -14,11 +14,12 @@ use the fonts in other ways in the font hierarchy etc. */
 
 /* change these */
 :root {
-  --bg-color: red;
-  --link-color: green;
-  --link-hover-color: blue;
-  --color-4: hotpink;
-  --color-5: rebeccapurple;
+  --bg-color: #333;
+  --link-color: #506485;
+  --link-hover-color: #4a999c;
+  --color-4: #d0d0bd;
+  --color-5: #8b6b89;
+  --color-6: #d4848f;
 
   --primary-font: "Open Sans", sans-serif;
   --secondary-font: "Droid Serif", serif;
@@ -26,25 +27,152 @@ use the fonts in other ways in the font hierarchy etc. */
 
   --white-space: 1rem;
 }
-
-button {
-  transition: all 3s;
+.primary-button {
+  width: 150px;
+  height: 70px;
+  border: none;
+  outline: none;
+  color: #fff;
+  background: #333;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 5px;
+  font-family: "Bookmark";
+  font-size: 1.5rem;
+  text-transform: uppercase;
 }
+
+.primary-button:before {
+  content: "";
+  background: linear-gradient(
+    90deg,
+    #506485,
+    #4a999c,
+    #d0d0bd,
+    #8b6b89,
+    #d4848f
+  );
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowing 20s linear infinite;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 10px;
+}
+
+.primary-button:active {
+  color: #333;
+}
+
+.primary-button:active:after {
+  background: transparent;
+}
+
+.primary-button:hover:before {
+  opacity: 1;
+}
+
+.primary-button:after {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #333;
+  left: 0;
+  top: 0;
+  border-radius: 10px;
+}
+.secondary-button {
+  width: 150px;
+  height: 70px;
+  border: none;
+  outline: none;
+  color: #fff;
+  background: #333;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 100%;
+  font-family: "Bookmark";
+  font-size: 1.5rem;
+  text-transform: uppercase;
+}
+
+.secondary-button:before {
+  content: "";
+  background: linear-gradient(
+    90deg,
+    #506485,
+    #4a999c,
+    #d0d0bd,
+    #8b6b89,
+    #d4848f
+  );
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowing 20s linear infinite;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 100%;
+}
+
+.secondary-button:active {
+  color: #333;
+}
+
+.secondary-button:active:after {
+  background: transparent;
+}
+
+.secondary-button:hover:before {
+  opacity: 1;
+}
+
+.secondary-button:after {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #333;
+  left: 0;
+  top: 0;
+  border-radius: 100%;
+}
+
 a {
   transition: all 3s;
 }
-button:hover {
-  background-color: var(--link-hover-color);
-  transform: scale(3) rotate(40deg);
-}
-
-button:active {
-  background-color: var(--bg-color);
-}
 
 a:hover {
-  color: var(--link-hover-color);
-  font-size: 4rem;
+  font-size: 2rem;
+  background-image: linear-gradient(
+    90deg,
+    #506485,
+    #4a999c,
+    #d0d0bd,
+    #8b6b89,
+    #d4848f
+  );
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
 }
 html {
   font-size: 100%;
@@ -144,27 +272,8 @@ ul li:last-child {
 .color-swatch-5 {
   background-color: var(--color-5);
 }
-
-.textures li {
-  height: 30vw;
-  width: 40%;
-  margin-right: 5vw;
-}
-
-.texture-swatch-1 {
-  background: url(../img/pw_maze_white.png) top left repeat;
-}
-
-.texture-swatch-2 {
-  background: url(../img/subtle_grunge.png) top left repeat;
-}
-
-.texture-swatch-1 {
-  background: url(../img/pw_maze_white.png) top left repeat;
-}
-
-.texture-swatch-3 {
-  background: url(../img/white_paperboard.png) top left repeat;
+.color-swatch-6 {
+  background-color: var(--color-6);
 }
 
 .images ul {
@@ -178,33 +287,6 @@ ul li:last-child {
   margin-bottom: 1rem;
 }
 
-button {
-  padding: 1rem;
-  border-radius: 4px;
-  background: var(--link-color);
-  text-align: center;
-  text-decoration: none;
-  font: bold 1.25em/1 var(--primary-font);
-  letter-spacing: 1px;
-  color: white;
-  text-transform: uppercase;
-  text-shadow: 0px -1px 0px #0374a0;
-  transition: all 0.2s ease;
-  cursor: pointer;
-  margin: 0 1rem 1rem 0;
-}
-
-.secondary-button {
-  background: var(--color-5);
-}
-
-button:focus,
-button:active,
-button:focus-within {
-  outline: 0;
-  border-radius: 4px;
-}
-
 .typography-main {
   color: var(--main-text-color);
 }
@@ -212,16 +294,16 @@ button:focus-within {
 .h1-sample {
   font-size: 2.4rem;
   font-weight: bold;
+  font-family: "MedievalSharp";
 }
 
 .h2-sample {
-  font-family: var(--secondary-font);
-  font-style: italic;
-  font-size: 1.25rem;
+  font-family: "Bookmark";
+  font-size: 1.5rem;
 }
 
 p.typography-sample {
-  font-family: var(--secondary-font);
+  font-family: "Baskerville";
   line-height: 1.5;
   max-width: 960px;
 }
@@ -235,7 +317,7 @@ em {
 }
 
 a {
-  font-family: var(--primary-font);
+  font-family: "Baskerville";
   color: var(--link-color);
   font-weight: bold;
   text-decoration: none;
@@ -284,5 +366,17 @@ footer {
 @media (min-width: 900px) {
   .adjectives ul {
     flex-direction: row;
+  }
+}
+
+@keyframes glowing {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
   }
 }
